MDEV-19457 sys_vars.wsrep_provider_basic failed

wsrep_init_provider_status_variables(): Always set wsrep_inited
to ensure that the memory will be freed.

The initial patch was provided by Julius Goryavsky.